# viui

./: Cargo.toml  README.md  counter.viui  counter.viui-component  counter.viui.yaml  counter.xui  counter2.viui-component
docs/: antora-playbook.yml
docs/devguide/: architecture-overview.adoc  devguide.adoc
examples/: sandbox.rs  sandbox_new.rs
examples/simple/: label.viui-component  labels.viui-component
src/: arenal.rs  geometry.rs  lib.rs  logging.rs  model.rs  observable_state.rs  resource.rs  result.rs  test_reflect.rs  types.rs  ui.rs  util.rs  widget_model.rs
src/ast/: eval.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  value.rs
src/component/: ast.rs  eval.rs  lexer.rs  parser.rs  value.rs
src/engine/: mod.rs
src/eval/: tree.rs
src/expression/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  span.rs  value.rs
src/infrastructure/: binding_stack.rs  facet.rs  font_pool.rs  image_pool.rs  layout_context.rs  measure_text.rs  mod.rs  reflect.rs  styling.rs  text_edit_state.rs  undo.rs
src/ir/: node.rs
src/nodes/: data.rs  descriptor.rs  events.rs  item.rs  mod.rs  registry.rs  types.rs
src/nodes/elements/: button.rs  hstack.rs  image.rs  kind.rs  knob.rs  label.rs  mod.rs  spinner.rs  textinput.rs
src/render/: backend.rs  backend_femtovg.rs  backend_svg.rs  command.rs  context.rs  femtovg_renderer.rs  mod.rs  parameters.rs  renderer.rs
src/test/: mod.rs  render_svg.rs
src/util/: parse_expression_to_text.rs
src/widget/: div.rs  label.rs  mod.rs
test/: label.viui-component
