[package]
name = "viui"
version = "0.1.0"
edition = "2021"

[dependencies]
femtovg = "0.10.1"
winit = "0.28.6"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
bevy_reflect = "0.14.2"
ron = "0.8.1"
rstar = "0.12.0"
default-boxed = "0.2.0"
thunderdome = "0.6.1"
rand = "0.8.5"
rgb = "0.8.50"
euclid = "0.22.11"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.11.1"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1