[package]
name = "viui"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[dependencies]
femtovg = "0.10.1"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
winit = "0.28.6"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
bevy_reflect = "0.14.2"
ron = "0.8.1"
rstar = "0.12.0"
rand = "0.8.5"
rgb = "0.8.50"
euclid = "0.22.11"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
regex-lite = "0.1.6"
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
notify-debouncer-mini = { version = "0.5.0", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5"
thiserror = "1.0.66"
error-stack = "0.5.0"
log = "0.4.22"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
termtree = "0.5.1"
unscanny = "0.1.0"
phf = { version = "0.11.2", features = ["macros"] }
taffy = "0.6.1"
ttf-parser = "0.25.0"
self_cell = "1.0.4"
rustybuzz = "0.20.1"
coolor = "1.0.0"
itertools = "0.13.0"
svg = "0.18.0"
pathdiff = "0.2.3"

[dev-dependencies]
expect-test = "1.5.0"
assertables = "9.3.0"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 0
lto = false
#debug = false
